# highlights

./: pyproject.toml
etc/: highlights.service  highlights.timer
highlights/: __main__.py
highlights/data/: teams.yaml
highlights/templates/: index.jinja
